Spider Infestation File Cleanup
moved old paks and v2 into a separate folder

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+_mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/GROUNDTABLEALLCOW.exml
+_mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/GROUNDTABLEALLCOW.MBIN
+_mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/
