Created New Tech for Sentinel Drops

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 _mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/GROUNDTABLEALLCOW.exml
 _mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/GROUNDTABLEALLCOW.MBIN
 _mod.SpiderInfestation/Old Stuff/ROLEDESCRIPTIONTABLESv02/
+z_ModderResources/Guide Tables/~$Just English Text.xlsx
